help section text updated

--- a/views/studentHelp.handlebars
+++ b/views/studentHelp.handlebars
@@ -37,20 +37,19 @@
         
         <div class = "helpText">  
           <p>
-            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
+            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging quiz game. The problems are personalized to cater to students' learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
           </p><br>
+          <p>
+            <div class="helpSection">Student account:</div> The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Students can find additional classes to add. They can also see their stats for each class.
+          </p>
+          </div>
         </div>
-        
-
-
-
-      </div>
 
 
 
 
-      <script src="https://code.jquery.com/jquery.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/introHCI.js"></script>
-    </body>
-    </html>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/introHCI.js"></script>
+      </body>
+      </html>
