--- a/views/instructorHelp.handlebars
+++ b/views/instructorHelp.handlebars
@@ -35,24 +35,21 @@
         <div class="t1">	<h1>Instructor Help</h1></div>
 
         <div class = "helpText">
-
           <p>
-            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
+            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging quiz game. The problems are personalized to cater to students' learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
           </p><br>
 
           <p>
-            <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor has access to all quizzes they created, a list of all of the students in their class who are using QuizWhiz, statistics of their class as a whole, and student feedback on their quizzes.</p>
-
-          </div>
-
-
+            <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor can also access his student's stats for each class in the form of a sortable table.
+          </p>
         </div>
+      </div>
 
 
 
 
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/introHCI.js"></script>
-      </body>
-      </html>
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/introHCI.js"></script>
+    </body>
+    </html>
