--- a/views/loginHelp.handlebars
+++ b/views/loginHelp.handlebars
@@ -39,28 +39,24 @@
 
         <div class = "helpText">
           <p>
-            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
+            <div class="helpSection">About:</div> QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging quiz game. The problems are personalized to cater to students' learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
           </p><br>
-
           <p>
             <div class="helpSection">Signing Up:</div> New users must create an account by clicking the signup button on the starting screen. The user will then have the option to choose between creating a student account or an instructor account.
-            Student account: The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Each student account has access to a list of available classes, a personalized friends list, leaderboards, and personal stats to track their performance and improvements.
           </p><br>
           <p>
-            <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor has access to all quizzes they created, a list of all of the students in their class who are using QuizWhiz, statistics of their class as a whole, and student feedback on their quizzes.
+          <p>
+            <div class="helpSection">Student account:</div> The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Students can find additional classes to add. They can also see their stats for each class.
+          </p><br>
+          <p>
+            <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor can also access his student's stats for each class in the form of a sortable table.
           </p>
           <br>
           <p>
-            <div class="helpSection">Getting Started:</div> Once an account is created, students will be able to register for a class using QuizWhiz, and instructors will be able to add  a class to the list of available classes at their institution. After registering for the desired classes, both students and instructors will be able to switch between their listed classes and begin either answering questions or asking new ones.
+            <div class="helpSection">Getting Started:</div> Once an account is created, students will be able to register for a class using QuizWhiz. After registering for the desired classes, both students and instructors will be able to switch between their listed classes and begin either answering questions or creating new ones.
           </p>
         </div>
-
-
-
       </div>
-
-
-
 
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="js/bootstrap.min.js"></script>
