--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -26,7 +26,7 @@
   <div class="container">
     <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
     <!-- p means paragraph -->
-    <div class="jumbotron">
+    <div class="jumbotron centered">
       <h1>Welcome {{loginStatus.name}}!</h1>
     </div>
 
