--- a/views/createQuiz.handlebars
+++ b/views/createQuiz.handlebars
@@ -67,9 +67,9 @@
             <input type="radio" id = "correctAnswer" name="correctAnswer" value="D"> D
             <hr>
             <div class="centered">
-            <input type="submit" id="addQuestionsBtn" class="btn btn-default" value="Submit and Return Home" onClick="return selectAction('home')"></input> <br><br>
-            <input type="submit" id="addQuestionsBtn" class="btn btn-default" value="Submit and Add Another" onClick="return selectAction('createQuiz')"></input>
-          </div>
+              <input type="submit" id="addQuestionsBtn" class="btn btn-default" value="Submit and Return Home" onClick="return selectAction('home')"></input> <br><br>
+              <input type="submit" id="addQuestionsBtn" class="btn btn-default" value="Submit and Add Another" onClick="return selectAction('createQuiz')"></input>
+            </div>
           </form>
         </div>
 
@@ -85,5 +85,6 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <script src="js/introHCI.js"></script>
+      {{> googleAnalytics}}
     </body>
     </html>
