--- a/views/loginHelp.handlebars
+++ b/views/loginHelp.handlebars
@@ -45,21 +45,22 @@
             <div class="helpSection">Signing Up:</div> New users must create an account by clicking the signup button on the starting screen. The user will then have the option to choose between creating a student account or an instructor account.
           </p><br>
           <p>
-          <p>
-            <div class="helpSection">Student account:</div> The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Students can find additional classes to add. They can also see their stats for each class.
-          </p><br>
-          <p>
-            <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor can also access his student's stats for each class in the form of a sortable table.
-          </p>
-          <br>
-          <p>
-            <div class="helpSection">Getting Started:</div> Once an account is created, students will be able to register for a class using QuizWhiz. After registering for the desired classes, both students and instructors will be able to switch between their listed classes and begin either answering questions or creating new ones.
-          </p>
+            <p>
+              <div class="helpSection">Student account:</div> The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Students can find additional classes to add. They can also see their stats for each class.
+            </p><br>
+            <p>
+              <div class="helpSection">Instructor account:</div> The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor can also access his student's stats for each class in the form of a sortable table.
+            </p>
+            <br>
+            <p>
+              <div class="helpSection">Getting Started:</div> Once an account is created, students will be able to register for a class using QuizWhiz. After registering for the desired classes, both students and instructors will be able to switch between their listed classes and begin either answering questions or creating new ones.
+            </p>
+          </div>
         </div>
-      </div>
 
-      <script src="https://code.jquery.com/jquery.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/introHCI.js"></script>
-    </body>
-    </html>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/introHCI.js"></script>
+        {{> googleAnalytics}}
+      </body>
+      </html>
