--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -78,5 +78,6 @@
         <script src="css3-preloader-transition-finish/js/main.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/introHCI.js"></script>
+        {{> googleAnalytics}}
       </body>
       </html>
