--- a/views/studentHelp.handlebars
+++ b/views/studentHelp.handlebars
@@ -42,14 +42,15 @@
           <p>
             <div class="helpSection">Student account:</div> The student account allows the user to play against other students taking the same classes in a one-on-one trivia game. Students can find additional classes to add. They can also see their stats for each class.
           </p>
-          </div>
         </div>
+      </div>
 
 
 
 
-        <script src="https://code.jquery.com/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/introHCI.js"></script>
-      </body>
-      </html>
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/introHCI.js"></script>
+      {{> googleAnalytics}}
+    </body>
+    </html>
